MDEV-35647 Possible hang during CREATE TABLE…SELECT error handling

ha_innobase::delete_table(): Clear trx->dict_operation_lock_mode
after, not before invoking trx->rollback(), so that
row_undo_mod_parse_undo_rec() will be invoked with dict_locked=true
and dict_sys_t::freeze() will not be invoked for loading a table
definition. Inside dict_sys_t::freeze(), an assertion !have_any()
would fail when the current thread is already holding the latch.

This fixes up commit c5fd9aa562fb15e8d6ededceccbec0c9792a3243 (MDEV-25919).

Reviewed by: Debarun Banerjee